--- a/calculator_project/calculator/templates/calculator.html
+++ b/calculator_project/calculator/templates/calculator.html
@@ -22,6 +22,7 @@
         <input type="number" name="num2" id="num2" placeholder="Enter second number">
 
         <button type="submit">Calculate</button>
+         <button type="submit" name="action" value="reset">Reset</button>
     </form>
 
     {% if result is not None %}
